Migrate ExportPreferences to new pattern